[gd_scene load_steps=3 format=3 uid="uid://bssjjygu83iwl"]

[ext_resource type="Script" path="res://Scripts/AudioManager.gd" id="1_hp1cr"]
[ext_resource type="AudioStream" uid="uid://d3ldv4818s140" path="res://Assets/Sound/FX/30_Jump_03.wav" id="6_okxva"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_hp1cr")

[node name="JumpSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_okxva")
volume_db = 1.5

[node name="CoinPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_okxva")
volume_db = 1.5

[node name="DeathSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_okxva")

[node name="RespawnSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_okxva")

[node name="LevelCompleteSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_okxva")
volume_db = -2.0
pitch_scale = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
