# This script is an autoload, that can be accessed from any other script!

extends Node

@onready var jump_sfx = $JumpSfx
@onready var coin_pickup_sfx = $CoinPickup
@onready var death_sfx = $DeathSfx
@onready var respawn_sfx = $RespawnSfx
@onready var level_complete_sfx = $LevelCompleteSfx
@onready var background_music = $BackgroundMusic
@onready var failure1 = $Failure1
@onready var failure2 = $Failure2
@onready var failure3 = $Failure3
@onready var failure4 = $Failure4
@onready var failure5 = $Failure5
@onready var failure6 = $Failure6
@onready var failure7 = $Failure7
@onready var failure8 = $Failure8
@onready var success1 = $Success1
@onready var success2 = $Success2
@onready var success3 = $Success3
